tests/e2e-chainsaw/v1beta2/acl-user/redis-cluster/acl-secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: acl-secret
type: Opaque
stringData:
  password: Opstree1234
  # yamllint disable-line rule:line-length
  user.acl: |-
    user default on >Opstree1234 ~* &* +@all
    user opstree on ~* &* +@all >abc@123
    user buildpiper on ~* &* +@all >abc@123
