tests/e2e-chainsaw/v1beta2/acl-user/redis-cluster/ready-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9121'
    prometheus.io/scrape: 'true'
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  labels:
    app: redis-cluster-v1beta2-leader
    redis_setup_type: cluster
    role: leader
  name: redis-cluster-v1beta2-leader-additional
  ownerReferences:
    - apiVersion: redis.redis.opstreelabs.in/v1beta2
      controller: true
      kind: RedisCluster
      name: redis-cluster-v1beta2
spec:
  ports:
    - name: redis-client
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-cluster-v1beta2-leader
    redis_setup_type: cluster
    role: leader
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9121'
    prometheus.io/scrape: 'true'
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  labels:
    app: redis-cluster-v1beta2-leader
    redis_setup_type: cluster
    role: leader
  name: redis-cluster-v1beta2-leader
  ownerReferences:
    - apiVersion: redis.redis.opstreelabs.in/v1beta2
      controller: true
      kind: RedisCluster
      name: redis-cluster-v1beta2
spec:
  ports:
    - name: redis-client
      port: 6379
      protocol: TCP
      targetPort: 6379
    - name: redis-exporter
      port: 9121
      protocol: TCP
      targetPort: 9121
  selector:
    app: redis-cluster-v1beta2-leader
    redis_setup_type: cluster
    role: leader
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9121'
    prometheus.io/scrape: 'true'
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  labels:
    app: redis-cluster-v1beta2-leader
    redis_setup_type: cluster
    role: leader
  name: redis-cluster-v1beta2-leader-headless
  ownerReferences:
    - apiVersion: redis.redis.opstreelabs.in/v1beta2
      controller: true
      kind: RedisCluster
      name: redis-cluster-v1beta2
spec:
  clusterIP: None
  ports:
    - name: redis-client
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-cluster-v1beta2-leader
    redis_setup_type: cluster
    role: leader
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9121'
    prometheus.io/scrape: 'true'
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  labels:
    app: redis-cluster-v1beta2-follower
    redis_setup_type: cluster
    role: follower
  name: redis-cluster-v1beta2-follower
  ownerReferences:
    - apiVersion: redis.redis.opstreelabs.in/v1beta2
      controller: true
      kind: RedisCluster
      name: redis-cluster-v1beta2
spec:
  ports:
    - name: redis-client
      port: 6379
      protocol: TCP
      targetPort: 6379
    - name: redis-exporter
      port: 9121
      protocol: TCP
      targetPort: 9121
  selector:
    app: redis-cluster-v1beta2-follower
    redis_setup_type: cluster
    role: follower
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9121'
    prometheus.io/scrape: 'true'
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  labels:
    app: redis-cluster-v1beta2-follower
    redis_setup_type: cluster
    role: follower
  name: redis-cluster-v1beta2-follower-additional
  ownerReferences:
    - apiVersion: redis.redis.opstreelabs.in/v1beta2
      controller: true
      kind: RedisCluster
      name: redis-cluster-v1beta2
spec:
  ports:
    - name: redis-client
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-cluster-v1beta2-follower
    redis_setup_type: cluster
    role: follower
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9121'
    prometheus.io/scrape: 'true'
    redis.opstreelabs.in: 'true'
    redis.opstreelabs.instance: redis-cluster-v1beta2
  labels:
    app: redis-cluster-v1beta2-follower
    redis_setup_type: cluster
    role: follower
  name: redis-cluster-v1beta2-follower-headless
  ownerReferences:
    - apiVersion: redis.redis.opstreelabs.in/v1beta2
      controller: true
      kind: RedisCluster
      name: redis-cluster-v1beta2
spec:
  clusterIP: None
  ports:
    - name: redis-client
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-cluster-v1beta2-follower
    redis_setup_type: cluster
    role: follower
  type: ClusterIP
status:
  loadBalancer: {}
