tests/e2e-chainsaw/v1beta2/acl-user/redis-cluster/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: acl-user-redis-cluster
spec:
  steps:
    - try:
        - apply:
            file: acl-secret.yaml
        - assert:
            resource:
              apiVersion: v1
              kind: Secret
              metadata:
                name: acl-secret
        - apply:
            file: cluster.yaml
        - assert:
            file: ready-cluster.yaml

    - name: Try saving a key With Password
      try:
        - script:
            timeout: 30s
            content: >
              kubectl exec --namespace ${NAMESPACE} --container redis-cluster-v1beta2-leader redis-cluster-v1beta2-leader-0 --
              redis-cli -c -p 6379 --user opstree --pass abc@123 set foo-0 bar-0
            check:
              (contains($stdout, 'OK')): true

    - name: Default user authenticates with the redisSecret password
      try:
        - script:
            timeout: 30s
            content: >
              kubectl exec --namespace ${NAMESPACE} --container redis-cluster-v1beta2-leader redis-cluster-v1beta2-leader-0 --
              redis-cli -c -p 6379 --no-auth-warning -a Opstree1234 get foo-0
            check:
              (contains($stdout, 'bar-0')): true
